--- a/lab4-4.html
+++ b/lab4-4.html
@@ -145,7 +145,7 @@ $(document).ready(function(){
 		$("#textvalue").text(function(){
 			return $("textarea").val();
 		});
-		$("#textvalue").css("color","#000");
+		$("#textvalue").css("color","#F00");
 	});
 });
 $(document).ready(function(){
